# mngamma-api

./: .replit  README.md  main.py  pyproject.toml
.flake8/: tox.ini
.github/workflows/: code-check.yml  code-checks.yml  codeql-analysis.yml
class/: campaign.py
