[tool.poetry]
name = "mngamma-api"
version = "0.1.0"
description = "backend for mngamma service"
authors = ["Stephen Titcombe <hello@mngamma.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
replit = "^3.2.4"
Flask = "^2.2.0"
fastapi = "^0.85.0"
uvicorn = "^0.18.3"
black = "^22.8.0"
pytest = "^7.1.3"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
python-lsp-server = {extras = ["yapf", "rope", "pyflakes", "flake8"], version = "^1.5.0"}
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
